--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "precommit": "npm run serve", 
+    "commitmsg": "npm run verifyCommitMessage",
+    "verifyCommitMessage": "node scripts/verifyCommitMessage.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
