--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "precommit": "npm run serve", 
-    "commitmsg": "npm run verifyCommitMessage",
-    "verifyCommitMessage": "node scripts/verifyCommitMessage.js"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
