--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "precommit": "sh ./.husky/pre-commit"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
